# p2p

./: CMakeLists.txt  README.md  app.cpp
spears_core/: CMakeLists.txt
spears_core/App/: CMakeLists.txt
spears_core/App/inc/: App.h
spears_core/App/src/: App.cpp
spears_core/Common/: CMakeLists.txt
spears_core/Common/inc/: CommonTypes.h  Parser.h
spears_core/Common/src/: Parser.cpp
spears_core/Crypto/: CMakeLists.txt
spears_core/Crypto/inc/: Crypto.h
spears_core/Crypto/src/: Crypto.cpp
spears_core/Event/: CMakeLists.txt
spears_core/Event/inc/: EventInterface.h  EventManager.h
spears_core/Event/src/: EventManager.cpp
spears_core/Server/: CMakeLists.txt
spears_core/Server/inc/: Connection.h  Server.h  SocketManager.h
spears_core/Server/src/: Connection.cpp  Server.cpp  SocketManager.cpp
spears_core/UI/: CMakeLists.txt
spears_core/UI/inc/: UI.h
spears_core/UI/src/: MessageList.cpp  TextField.cpp  UI.cpp  UsersInterface.cpp  VisElemuButton.cpp  Window.cpp  WindowInterfaces.cpp  spears_client
tests/Network/Server/: tests.cpp
